gitops/workloads/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: lldap
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authelia-forwardauth@kubernetescrd
    cert-manager.io/cluster-issuer: lab-ca
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lldap.apps.lab.home.arpa
      secretName: lldap-tls
  rules:
    - host: lldap.apps.lab.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
